--- a/.github/workflows/cd-worker.yml
+++ b/.github/workflows/cd-worker.yml
@@ -25,7 +25,7 @@ jobs:
     - id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
     - id: build-image
-      env: { ECR_REGISTRY: "${{ id.login-ecr.outputs.registry }}", IMAGE_TAG: "${{ github.sha }}" }
+      env: { ECR_REGISTRY: "${{ steps.login-ecr.outputs.registry }}", IMAGE_TAG: "${{ github.sha }}" }
       run: |
         docker build -t ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:$IMAGE_TAG -f ${{ env.DOCKERFILE_PATH }} .
         docker push ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:$IMAGE_TAG
